HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainMultiple/Expected.uv
//! Expected diagnostic metadata for the MainMultiple rejected-source specimen.

expectedDiagnostic("E-MOD-2430", "rule.15.Main-Multiple")
